# job-assignment-app

./: .cz.toml  .env.docker  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  angular.json  docker-compose.dev.yml  docker-compose.test.yml  package.json  tsconfig.json
back/: main.py
backend/: '  .env.docker  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  api.postman_collection.json  cli.py  db.py  docker-compose.dev.yml  entrypoint.sh  filler.py  init.py  init_db.py  main.py  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt  server.py  test2.py  test_registrator.py  tmp.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 03fe2c8830c8_position.py  0781a99164bc_initial.py  1abad6d51fb2_position_company_id.py  1c3ad3002250_confirm_code_table.py  2ed2760e1008_candidate_fk.py  3954a48d268b_initial.py  3d65f0f2df6e_company_image_link_not_required.py  3fd1f24e3310_initial.py  (+13 more)
backend/api/: README.md  __init__.py  cli.py  init.py  main.py  settings.py  types.py
backend/app/: db.py  enums.py  main.py  models.py  routes.py  settings.py  views.py
backend/database/: __init__.py  models.py  utils.py
backend/globalTypes/: __init__.py  consts.py  enums.py
backend/pkg/: app_keys.py  consts.py  container.py  database.py  errors.py  exceptions.py  initialize.py  jwt.py  rabbitmq.py  response.py  settings.py  utils.py
backend/tests/: conftest.py  test_config.py  test_create_candidate.py  test_create_position.py  test_init_app.py  test_permission_on_company_routes.py  test_register_company.py
(+275 files in other folders)
