[project]
name = "JobCrafter"
version = "0.0.0"
description = "Backend api for JobCrafter application"
authors = ["shaninalex"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 120

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "app/enums.py",
    "app/api/serializers.py",
]
