[project]
name = "JobCrafter"
version = "0.8.2"
description = "Backend api for JobCrafter example application"
authors = ["shanin.x@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 120

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "app/enums.py",
    "app/api/serializers.py",
]
